Updating index and adding thesis

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world
+<!doctype html>
+<html>
+  <head>
+    <title>Alisha Ramos - developer, designer, writer</title>
+  </head>
+<body>
+<strong>Alisha Ramos - developer, designer, writer</strong><br />
+Work in progress. Email me at ramos.alisha@gmail.com with any questions or comments.
+</body>
+</html>
