Another small edit to index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   </head>
 <body>
 <strong>Alisha Ramos - developer, designer, writer</strong><br />
-Work in progress. Email me at ramos.alisha@gmail.com with any questions or comments.
+Work in progress.<br />
+If you're looking for my research on women entrepreneurs and venture capital, you can find the <a href="http://alishalisha.github.io/AlishaRamos_Thesis_WomenVC.pdf">full text of my study here.</a><br /><br />
+Email me at ramos.alisha@gmail.com with any questions or comments.
 </body>
 </html>
