--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <title>Alisha Ramos - developer, designer, writer</title>
   </head>
 <body>
-<strong>Alisha Ramos - developer, designer, writer</strong><br />
-Work in progress.<br />
-If you're looking for my research on women entrepreneurs and venture capital, you can find the <a href="http://alishalisha.github.io/AlishaRamos_Thesis_WomenVC.pdf">full text of my study here.</a><br /><br />
-Email me at ramos.alisha@gmail.com with any questions or comments.
+  <center>
+    <h1>Alisha Ramos - developer, designer, writer</h1><br />
+    <i>Working on a new site design.</i><br /><br />
+    I'm a front-end designer at Vox Media.<br /><br />
+    If you're looking for my research on women entrepreneurs and venture capital,<br />
+    you can find the <a href="http://alishalisha.github.io/AlishaRamos_Thesis_WomenVC.pdf">full text of my study here.</a><br /><br />
+    <p><strong>Other:</strong><br />
+    <a href="http://twitter.com/alishalisha">@alishalisha</a> | <a href="http://alisharamos.tumblr.com">What I'm Reading</a> | <a href="http://internetgoeshere.com">Writing</a> | <a href="http://instagram.com/alisharamos">Instagram</a></p>
+    <p>You can email me at ramos.alisha@gmail.com.</p>
+    <img src="http://adultcatfinder.com/embed/cat.gif" />
+  </center>
 </body>
 </html>
