--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>Alisha Ramos - developer, designer, writer</title>
+    <title>Alisha Ramos</title>
   </head>
 <body>
   <center>
-    <h1>Alisha Ramos - developer, designer, writer</h1><br />
+    <h1>~*~Alisha Ramos~*~</h1><br />
     <i>Working on a new site design.</i><br /><br />
     I'm a front-end designer at Vox Media.<br /><br />
     If you're looking for my research on women entrepreneurs and venture capital,<br />
