--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Alisha Ramos - developer, designer, writer</title>
   </head>
 <body>
+  <!-- bloop -->
   <center>
     <h1>Alisha Ramos - developer, designer, writer</h1><br />
     <i>Working on a new site design.</i><br /><br />
