new site design

--- a/index.html
+++ b/index.html
@@ -2,19 +2,54 @@
 <html>
   <head>
     <title>Alisha Ramos</title>
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Astloch|Antic+Didone|Old+Standard+TT:400,400italic,700|Cardo:400,400italic,700|Arapey:400italic,400|Italiana' rel='stylesheet' type='text/css'>
   </head>
 <body>
-  <!-- bloop -->
-  <center>
-    <h1>~*~Alisha Ramos~*~</h1><br />
-    <i>Working on a new site design.</i><br /><br />
-    I'm a front-end designer at Vox Media.<br /><br />
-    If you're looking for my research on women entrepreneurs and venture capital,<br />
-    you can find the <a href="http://alishalisha.github.io/AlishaRamos_Thesis_WomenVC.pdf">full text of my study here.</a><br /><br />
-    <p><strong>Other:</strong><br />
-    <a href="http://twitter.com/alishalisha">@alishalisha</a> | <a href="http://alisharamos.tumblr.com">What I'm Reading</a> | <a href="http://internetgoeshere.com">Writing</a> | <a href="http://instagram.com/alisharamos">Instagram</a></p>
-    <p>You can email me at ramos.alisha@gmail.com.</p>
-    <img src="http://adultcatfinder.com/embed/cat.gif" />
-  </center>
+  <div class="wrapper">
+    <div class="left">
+      <h1>Alisha Ramos</h1>
+      <p>I'm a designer and developer working at Vox Media in D.C.</p>
+      <p><i><small>This site is still undergoing a redesign. Sigh, repeat, and come back later.</small></i></p>
+      <a href="mailto:alisha.ramos@voxmedia.com">.</a> 
+      <a href="http://twitter.com/alishalisha">.</a> <a href="http://github.com/alishalisha">.</a> <a href="http://internetgoeshere.com">.</a>
+    </div
+    ><div class="right">
+
+      <div class="section feeling">
+        <h2>What I'm Feeling</h2>
+        <img src="http://40.media.tumblr.com/70193419b0a76a71bb3c9fe2ced31d0f/tumblr_ng4t4knY171rsyaepo1_500.png" />
+        <br /><span class="meta"><a href="http://death-by-elocution.tumblr.com/post/104441252315">image credit.</a></span>
+      </div>
+
+      <div class="section">
+        <h2>Design</h2>
+        <p>Sometimes I design things. I will share them here someday, I'm sure.</p>
+      </div>
+
+      <div class="section">
+      <h2>Research and Writing</h2>
+        <li><a href="http://alishalisha.github.io/AlishaRamos_Thesis_WomenVC.pdf">In the Shark Tank: The Social Construction of Gendered Valuation in Venture Capital Investing of Women's Technology Startups</a>
+        <span>&nbsp;&mdash; Senior Thesis, Harvard University (2012)</span></li>
+        <li><a href="http://internetgoeshere.com/post/99139215153/a-study-in-subtle-hostility">A Study in Subtle Hostility</a>
+        <span>&nbsp;&mdash; PERSONAL (2014)</span></li>
+      </div>
+
+      <div class="section">
+      <h2>Interviews</h2>
+        <li><a href="http://www.refinery29.com/techology-career-advice#page-2">How I Broke Into Tech With A Liberal Arts Degree</a>
+        <span>&nbsp;&mdash; Refinery29.com</span></li>
+      </div>
+
+      <div class="section quote">
+        <h2>A Quote to Hold Close</h2>
+        <p>"It takes years as a woman to unlearn what you have been taught to be sorry for."</p>
+        <span class="quote-credit">&mdash; Amy Poehler, "Yes Please"</span>
+      </div> 
+    </div>
+    <footer class="footer">
+    &copy; Alisha Ramos.
+    </footer>
+  </div>
 </body>
 </html>
