--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alisha Ramos</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link href='http://fonts.googleapis.com/css?family=Astloch|Antic+Didone|Old+Standard+TT:400,400italic,700|Cardo:400,400italic,700|Arapey:400italic,400|Italiana' rel='stylesheet' type='text/css'>
