adding breakfast at tiffanys image

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
       <div class="section feeling">
         <h2>What I'm Feeling</h2>
         <!-- <img src="http://40.media.tumblr.com/70193419b0a76a71bb3c9fe2ced31d0f/tumblr_ng4t4knY171rsyaepo1_500.png" /> -->
-        <img src="https://s-media-cache-ak0.pinimg.com/736x/f0/c2/cb/f0c2cb05697cfbf7dec6e282028a8c0c.jpg" />
-        <br /><span class="meta">Ingrid Bergman and Alfred Hitchcock.</span>
+        <!-- <img src="https://s-media-cache-ak0.pinimg.
+        com/736x/f0/c2/cb/f0c2cb05697cfbf7dec6e282028a8c0c.jpg" /> -->
+        <img src="http://i.imgur.com/1P1gztv.jpg" />
+        <br /><span class="meta">Breakfast at Tiffany's.</span>
       </div>
 
       <div class="section">
