testing spotify embed playlist

--- a/play/index.html
+++ b/play/index.html
@@ -1,1 +1,2 @@
 <h2>Test - hello world.</h2>
+<center><iframe src="https://embed.spotify.com/?uri=spotify:user:1218597763:playlist:7pRRLS98VtcASR298WrKKh" width="300" height="380" frameborder="0" allowtransparency="true"></iframe></center>
