adding Verge interview

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
       <h2>Interviews</h2>
         <li><a href="http://www.refinery29.com/techology-career-advice#page-2">How I Broke Into Tech With A Liberal Arts Degree</a>
         <span>&nbsp;&mdash; Refinery29.com</span></li>
+        <li><a href="http://www.theverge.com/2013/3/6/4067276/money-matters-why-women-founders-struggle-in-silicon-valley">Money matters: why women founders struggle in Silicon Valley</a>
+        <span>&nbsp;&mdash; The Verge (2013)</span></li>
       </div>
 
       <div class="section quote">
