--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- <img src="http://40.media.tumblr.com/70193419b0a76a71bb3c9fe2ced31d0f/tumblr_ng4t4knY171rsyaepo1_500.png" /> -->
         <!-- <img src="https://s-media-cache-ak0.pinimg.
         com/736x/f0/c2/cb/f0c2cb05697cfbf7dec6e282028a8c0c.jpg" /> -->
-        <img src="http://i.imgur.com/1P1gztv.jpg" />
+        <img src="https://s-media-cache-ak0.pinimg.com/736x/2a/d3/81/2ad381a992b657ecd870453d2b7dd473.jpg" />
         <br /><span class="meta">Breakfast at Tiffany's.</span>
       </div>
 
