adding music and a new image

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <!-- <img src="http://40.media.tumblr.com/70193419b0a76a71bb3c9fe2ced31d0f/tumblr_ng4t4knY171rsyaepo1_500.png" /> -->
         <!-- <img src="https://s-media-cache-ak0.pinimg.
         com/736x/f0/c2/cb/f0c2cb05697cfbf7dec6e282028a8c0c.jpg" /> -->
-        <img src="https://s-media-cache-ak0.pinimg.com/736x/2a/d3/81/2ad381a992b657ecd870453d2b7dd473.jpg" />
-        <br /><span class="meta">Audrey Hepburn</span>
+<!--         <img src="https://s-media-cache-ak0.pinimg.com/736x/2a/d3/81/2ad381a992b657ecd870453d2b7dd473.jpg" /> -->
+        <img src="images/dFibs1mDpk2q6vvkrjgRKX3Jo1_500.jpg" />
+        <!-- <br /><span class="meta">Audrey Hepburn</span> -->
       </div>
 
       <div class="section">
@@ -67,6 +68,12 @@
           <p>You can take a peek at what articles I'm reading <a href="http://alisharamos.tumblr.com">here</a>.
         </p>
       </div> 
+
+      <div class="section">
+        <h2>What I'm Listening To</h2>
+        <iframe src="https://embed.spotify.com/?uri=spotify:track:2Fwdbqvl6YtfYsu85vONW3" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+      </div>
+
       <div class="section">
         <h2>Bio</h2>
         <p>I'm a designer, developer, and sometimes-writer living in Washington, D.C. I currently work at <a href="http://voxmedia.com">Vox Media</a> as a front-end designer. Prior to working in tech, I worked in brand consulting in New York. I graduated from Harvard University with a degree in Sociology and Medieval History.</p>
