--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <!-- <img src="https://s-media-cache-ak0.pinimg.
         com/736x/f0/c2/cb/f0c2cb05697cfbf7dec6e282028a8c0c.jpg" /> -->
 <!--         <img src="https://s-media-cache-ak0.pinimg.com/736x/2a/d3/81/2ad381a992b657ecd870453d2b7dd473.jpg" /> -->
-        <img src="images/dFibs1mDpk2q6vvkrjgRKX3Jo1_500.jpg" />
-        <!-- <br /><span class="meta">Audrey Hepburn</span> -->
+        <img src="images/francoise.jpg" />
+        <br /><span class="meta">Francoise Hardy</span>
       </div>
 
       <div class="section">
