accessibility: adding english as language

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
     <title>Alisha Ramos</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link href='http://fonts.googleapis.com/css?family=Astloch|Antic+Didone|Cardo:400,400italic,700|Arapey:400italic,400|Italiana' rel='stylesheet' type='text/css'>
