accessibility: adding titles to links

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <h1>Alisha Ramos</h1>
       <p>I'm a designer and developer working at Vox Media in D.C.</p>
       <ul>
-        <li><a href="mailto:alisha.ramos@voxmedia.com"><i class="fa fa-envelope"></i></a></li>
-        <li><a href="http://twitter.com/alishalisha"><i class="fa fa-twitter"></i></a></li> 
-        <li><a href="http://github.com/alishalisha"><i class="fa fa-github"></i></a></li>
-        <li><a href="http://internetgoeshere.com"><i class="fa fa-globe"></i></a><li>
+        <li><a href="mailto:alisha.ramos@voxmedia.com" title="email"><i class="fa fa-envelope"></i></a></li>
+        <li><a href="http://twitter.com/alishalisha" title="twitter"><i class="fa fa-twitter"></i></a></li> 
+        <li><a href="http://github.com/alishalisha" title="github"><i class="fa fa-github"></i></a></li>
+        <li><a href="http://internetgoeshere.com" title="writing"><i class="fa fa-globe"></i></a><li>
       </ul>
     </div><div class="right">
 
