accessibility: adding alt text to image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <div class="section feeling">
         <h2>What I'm Feeling</h2>
-        <img src="http://31.media.tumblr.com/cbfbadce9c3dcc9a5e3dc63f3413bf6f/tumblr_nbgkcbmkyT1qzgwh4o1_500.gif" />
+        <img src="http://31.media.tumblr.com/cbfbadce9c3dcc9a5e3dc63f3413bf6f/tumblr_nbgkcbmkyT1qzgwh4o1_500.gif" alt="Sophia Loren in Five Miles to Midnight" />
         <br /><span class="meta">Sophia Loren in <i>Five Miles to Midnight</i> (1962)</span>
       </div>
 
