--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
       <div class="section feeling">
         <h2>What I'm Feeling</h2>
-        <img src="http://31.media.tumblr.com/cbfbadce9c3dcc9a5e3dc63f3413bf6f/tumblr_nbgkcbmkyT1qzgwh4o1_500.gif" alt="Sophia Loren in Five Miles to Midnight" />
-        <br /><span class="meta">Sophia Loren in <i>Five Miles to Midnight</i> (1962)</span>
+        <img src="https://40.media.tumblr.com/b4d6a8208ec554d781dd071002b9e8ff/tumblr_nmycodaoC51qzh0vno1_500.jpg" alt="Sophia Loren in Five Miles to Midnight" />
+        <br /><span class="meta"><i>Masculin féminin</i> (1966)</span>
       </div>
 
       <div class="section">
