--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       </ul>
     </div><div class="right">
 
+      <div class="section">
+        <h2>About</h2>
+        <p>I'm a senior front-end engineer, product designer, and sometimes-writer living in Washington, D.C. I currently work at <a href="http://voxmedia.com">Vox Media</a> building scalable, functional, and beautiful platforms for our revenue products. Before this, I worked as a strategy consultant in New York. I graduated from Harvard University with a Bachelor's degree in Sociology and Medieval History.</p>
+      </div>
+
       <div class="section feeling">
         <h2>What I'm Feeling</h2>
         <img src="https://igcdn-photos-b-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/e35/11910295_849704401793001_1697619041_n.jpg" alt="Coffee in the morning" style="max-height: 300px;" />
@@ -30,7 +35,7 @@
 
       <div class="section">
         <h2>Design and Projects</h2>
-        <p>I'm a senior front-end engineer and product designer at Vox Media. <a href="http://theverge.com">Please</a> <a href="http://vox.com">visit</a> <a href="http://polygon.com">one</a> <a href="http://sbnation.com">of</a> <a href="http://eater.com">these</a> <a href="http://racked.com">fine</a> <a href="http://curbed.com">websites</a>.</p>
+        <p><a href="http://theverge.com">Please</a> <a href="http://vox.com">visit</a> <a href="http://polygon.com">one</a> <a href="http://sbnation.com">of</a> <a href="http://eater.com">these</a> <a href="http://racked.com">fine</a> <a href="http://curbed.com">websites</a>.</p>
       </div>
 
       <div class="section">
@@ -74,11 +79,6 @@
       <div class="section">
         <h2>Listening</h2>
         <iframe src="https://embed.spotify.com/?uri=spotify%3Atrack%3A6nmz4imkDcmtwMjocAzFSx" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
-      </div>
-
-      <div class="section">
-        <h2>About</h2>
-        <p>I'm a senior front-end engineer, product designer, and sometimes-writer living in Washington, D.C. I currently work at <a href="http://voxmedia.com">Vox Media</a> building scalable, functional, and beautiful platforms for our revenue products. Prior to working in tech, I worked in brand consulting in New York. I graduated from Harvard University with a degree in Sociology and Medieval History.</p>
       </div>
     </div>
     <footer class="footer">
