--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <div class="section feeling">
         <h2>What I'm Feeling</h2>
-        <img src="https://igcdn-photos-b-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/e35/11910295_849704401793001_1697619041_n.jpg" alt="Coffee in the morning" style="max-height: 300px;" />
+        <img src="https://media.giphy.com/media/5KuPVqoVRvQcg/giphy.gif" alt="Santa Claws." style="max-height: 300px;" />
         <br /><span class="meta"></span>
       </div>
 
