--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@
   <img src="/images/alisha-ramos.png" style="display: block; margin: 40px auto 30px auto; width: 343px;" />
 
   <div class="p-paragraph" style="margin-bottom: 40px;">
-    <p>A child of the early 2000's, Neopets and Livejournal taught me how to code and design, and that's precisely what I do now. I'm currently a senior product designer at Vox Media based in Washington, D.C. building scalable, functional, and beautiful platforms.</p>
+    <p>A child of the early 2000's, Neopets and Livejournal taught me how to code and design, and that's precisely what I do now. I'm currently a Product Design Director at Vox Media based in Washington, D.C. building scalable, functional, and beautiful platforms.</p>
 
     <p>I enjoy: building what I design through code, learning new technologies, and hacking on zany ideas. I believe: that users always come first, engineers and designers should collaborate more, and that you shouldn't be afraid to show your work.</p>
 
